--- a/lib/package.json
+++ b/lib/package.json
@@ -122,7 +122,7 @@
     "react-hot-loader": "^3.0.0-beta.1",
     "react-inview-monitor": "^1.1.1",
     "react-portal": "^4.0.0",
-    "react-portal-tooltip": "^2.1.0",
+    "react-portal-tooltip": "2.3.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
@@ -164,7 +164,6 @@
     "transactions-cms-state": "latest",
     "transactions-cms-web": "latest",
     "transactions-d3-graph": "latest",
-    "transactions-demos-todos": "latest",
     "transactions-description-definition": "latest",
     "transactions-draft-editor": "latest",
     "transactions-express-aws": "latest",
@@ -183,9 +182,10 @@
     "transactions-media-web": "latest",
     "transactions-redux-normalizer": "latest",
     "transactions-redux-package": "latest",
-    "transactions-redux-query": "latest",
     "transactions-redux-react": "latest",
     "transactions-redux-request": "latest",
+    "transactions-redux-router": "latest",
+    "transactions-redux-socketio": "latest",
     "transactions-tests": "latest",
     "transactions-tools-isomorphic": "latest",
     "transactions-tooltip-state": "latest",
@@ -194,7 +194,6 @@
     "transactions-user-state": "latest",
     "transactions-user-web": "latest",
     "url-loader": "^0.5.8",
-    "url-slug": "^2.0.0",
     "webpack": "^3.3.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "2.4.2",
